* BUG#6816 Clean up process logs after history restoration

Version 1.12 - 2017-04-28
* FEA#0000 Allow to chose the step on which an event starting a process should start

Version 1.10 - 2016-11-02
* FEA#0000 Add sequence on process to be able to order process

Version 1.8 - 2016-07-06
* FEA#0000 Add average timings wizard
* FEA#0000 Add "Postpone" action on processes and tasks
* FEA#0000 Allow to use an existing view as a step view
* FEA#0000 Pyson condition on process initiation can apply on original or event object

Version 1.6 - 2015-12-23
* FEA#0000 Allow to initiate process from event
* FEA#0000 Add confirmation message on automatically generated button

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* FEA#0000 Add pre validation on current step view

Version 1.2 - 2014-07-01
* FEA#0000 Changelog file creation